@@ -1,3 +1,7 @@
+drkns 29.11.2016 21:50:31 +0200 - build 4863
+
+1. Падение при вызове меню ассоциаций, если ассоциации отсутствовали.
+
 zg 29.11.2016 19:09:02 +0200 - build 4862
 
 1. продолжение 4808.1.
